@@ -3,6 +3,7 @@ GJ 9/11/05
   obtained using standard peersim components. See the config-file.
 - Any Linkable protocol can be initialized by the HOT topology.
 - RobustenessEvaluator removed, use RandRemoval instead.
+- InetNodeProtocol renamed to: InetCoordinates.
 
 AM 08/11/05
 - Fixed a bug in ClassFinder (a problem with file separator in 
